# testframework

./: CMakeLists.txt  LICENSE.md  PackagesList.cmake  README.md  TPLsList.cmake  TRIBITS_UPGRADE.md  gtest_main.cc  gtest_qapp_main.cc  gtest_qcoreapp_main.cc  qappfixture.hh  qcoreappfixture.hh
cmake/: CallbackSetupExtraOptions.cmake  Dependencies.cmake
modules/: GoogleTest.cmake
setup/: CMakeLists.txt
